--- a/week 3/PhotoAgregeator.html
+++ b/week 3/PhotoAgregeator.html
@@ -1,6 +1,6 @@
 <DOCTYPE HTML!>
 
-  < <html>
+  <html>
 
    <head>
        <title></title>
@@ -13,7 +13,7 @@
        <label>Enter Meme URLS</label>
        <input type=“text” id=“pic”>
        <button id=“Enter”>Submit</button>
-       <p></p>
+       <p>this is A PARAGRAPH</p>
    </body>
 
    </html>
